changed lib filenames to be more standard for use in rails apps

--- a/README
+++ b/README
@@ -11,13 +11,23 @@ Install
 
    * To install as a plugin:
  
-    script/plugin install http://github.com/jackdempsey/acts_as_commentable.git
+    script/plugin install http://github.com/mattvanhorn/acts_as_commentable.git
+
+   * To install as a gem
+   sudo gem install 
 
   Merb/Rails
   
    * To install as a gem:
- 
-   rake install
+    Run the following if you haven't already:
+    gem sources -a http://gems.github.com
+
+    Install the gem(s):
+    sudo gem install mattvanhorn-acts_as_commentable
+
+    add the folloowing line to your environment.rb
+    config.gem 'mattvanhorn-acts_as_commentable', :lib => 'acts_as_commentable', :source => "http://gems.github.com"
+   
  
  Generate your comment model:
  
